; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/gdi32/extr_FrameRgn.c_CheckBitmapBitsWithLine.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/gdi32/extr_FrameRgn.c_CheckBitmapBitsWithLine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [55 x i8] c"Wrong pixel at (%u,%u): expected 0x%08lx, got 0x%08lx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i64, i64, i64*, i64*)* @CheckBitmapBitsWithLine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CheckBitmapBitsWithLine(i32 %0, i32 %1, i64 %2, i64 %3, i64* %4, i64* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64* %4, i64** %11, align 8
  store i64* %5, i64** %12, align 8
  store i64 0, i64* %14, align 8
  br label %16

16:                                               ; preds = %62, %6
  %17 = load i64, i64* %14, align 8
  %18 = load i64, i64* %10, align 8
  %19 = icmp slt i64 %17, %18
  br i1 %19, label %20, label %65

20:                                               ; preds = %16
  store i64 0, i64* %13, align 8
  br label %21

21:                                               ; preds = %58, %20
  %22 = load i64, i64* %13, align 8
  %23 = load i64, i64* %10, align 8
  %24 = icmp slt i64 %22, %23
  br i1 %24, label %25, label %61

25:                                               ; preds = %21
  %26 = load i64, i64* %14, align 8
  %27 = load i64, i64* %9, align 8
  %28 = mul nsw i64 %26, %27
  %29 = load i64, i64* %13, align 8
  %30 = add nsw i64 %28, %29
  store i64 %30, i64* %15, align 8
  %31 = load i32, i32* %8, align 4
  %32 = load i64, i64* %13, align 8
  %33 = load i64, i64* %14, align 8
  %34 = call i64 @GetPixel(i32 %31, i64 %32, i64 %33)
  %35 = load i64*, i64** %12, align 8
  %36 = load i64*, i64** %11, align 8
  %37 = load i64, i64* %15, align 8
  %38 = getelementptr inbounds i64, i64* %36, i64 %37
  %39 = load i64, i64* %38, align 8
  %40 = getelementptr inbounds i64, i64* %35, i64 %39
  %41 = load i64, i64* %40, align 8
  %42 = icmp eq i64 %34, %41
  %43 = zext i1 %42 to i32
  %44 = load i64, i64* %13, align 8
  %45 = load i64, i64* %14, align 8
  %46 = load i64*, i64** %12, align 8
  %47 = load i64*, i64** %11, align 8
  %48 = load i64, i64* %15, align 8
  %49 = getelementptr inbounds i64, i64* %47, i64 %48
  %50 = load i64, i64* %49, align 8
  %51 = getelementptr inbounds i64, i64* %46, i64 %50
  %52 = load i64, i64* %51, align 8
  %53 = load i32, i32* %8, align 4
  %54 = load i64, i64* %13, align 8
  %55 = load i64, i64* %14, align 8
  %56 = call i64 @GetPixel(i32 %53, i64 %54, i64 %55)
  %57 = call i32 @ok(i32 %43, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i64 %44, i64 %45, i64 %52, i64 %56)
  br label %58

58:                                               ; preds = %25
  %59 = load i64, i64* %13, align 8
  %60 = add nsw i64 %59, 1
  store i64 %60, i64* %13, align 8
  br label %21

61:                                               ; preds = %21
  br label %62

62:                                               ; preds = %61
  %63 = load i64, i64* %14, align 8
  %64 = add nsw i64 %63, 1
  store i64 %64, i64* %14, align 8
  br label %16

65:                                               ; preds = %16
  ret void
}

declare dso_local i32 @ok(i32, i8*, i64, i64, i64, i64) #1

declare dso_local i64 @GetPixel(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
